# teuto-moisture-map-python

./: .dev.env  .env  .gitignore  Readme.md  docker-compose.ci.yaml  docker-compose.dev.yaml  docker-compose.int-test.yaml  docker-compose.int.yaml  docker-compose.prod.yaml  docker-compose.yaml  docker-compose.yml  dockerCompose.subst.yaml
.github/workflows/: dwd-import-checks.yml  dwd-import.yml  tmm-api-aws-dev.yml  tmm-api-deploy-aws.yml  tmm-api-docker.yml  tmm-api-integration-test.yml  tmm-api.yml
docker/: .env.example  docker-compose.yaml
examples/: influx_config.ini  influx_docker.env  tmm_api_key  tmm_bucket
export/: Dockerfile  config.ini.example  export_influx.py  requirements.txt
metadata/django/medama/: manage.py
metadata/django/medama/medama/: asgi.py  settings.py  urls.py  wsgi.py
metadata/django/medama/medamapp/: admin.py  apps.py  models.py  views.py
metadata/django/medama/medamapp/migrations/: 0001_initial.py  0002_auto_20220813_1849.py  0003_auto_20220820_1112.py
metadata/django/medama/medamapp/templates/: dashboard.html  login.html  main_template.html
services/dwd-import/: .dockerignore  .envrc  .flake8  Dockerfile  Readme.md  Scratchpad.ipynb  mypy.ini  noxfile.py  pyproject.toml
services/dwd-import/dwd_import/: dwd_import.py  dwd_raster.py  dwd_stations.py  models.py  test.py
services/dwd-import/dwd_import/db/: __init__.py  influx.py  mock.py  mongo.py
services/dwd-import/src/: dwd_import.py  dwd_raster.py  dwd_stations.py  influx.py  models.py  requirements.txt
services/dwd-import/src/db/: __init__.py  influx.py
services/dwd-import/test/: test_nothing.py
services/nginx/: nginx.conf
services/tmm-api/: .dockerignore  .gitignore  Dockerfile  Makefile  Procfile  Readme.md  influx_config.ini.template  mypy.ini  noxfile.py  pyproject.toml
services/tmm-api/scripts/: keygen.py
services/tmm-api/terraform/: .gitignore  .terraform.lock.hcl  Makefile  api_gateway.tf  database.tf  deploy_roles.tf  lambda.tf  main.tf  outputs.tf  secrets.tf  variables.tf
services/tmm-api/test/: dragino_ttn_payload.json  test_DraginoParser.py  test_RegEx.py
services/tmm-api/test/ttn/: test_TTNMessage.py
services/tmm-api/tmm_api/: __init__.py  app.py
services/tmm-api/tmm_api/common/: auth.py  aws_secrets.py  influx.py  secrets.py  sensor_metadata.py
services/tmm-api/tmm_api/domain/: SoilMeasurement.py
services/tmm-api/tmm_api/export/: export_influx.py  map_overview.py  sensor_report.py  util.py
services/tmm-api/tmm_api/export/queries/: sensor_report.flux  sensor_report.py
services/tmm-api/tmm_api/ttn/: SoilMeasurement.py  TTNMessage.py  __init__.py  dragino.py  test_data.py
services/tmm-api/tmm_api/ttn/examples/: __init__.py
services/tmm-api/tmm_api/ttn/payload/: DraginoLSE01.py  PayloadParser.py  __init__.py
services/ttn-hook/: Dockerfile  Readme.md  pyproject.toml
services/ttn-hook/test/: test_dragino_parser.py  test_reg_ex.py
services/web/: Dockerfile
services/web/src/: app.py
services/web/src/common/: influx.py
services/web/src/test/: context.py  testDraginoParser.py  testRegEx.py
services/web/src/tmm/: export_influx.py
services/web/src/ttn/: __init__.py
services/web/src/ttn/examples/: __init__.py
services/web/src/ttn/payload/: __init__.py
test/: context.py  dragino_ttn_payload.json  testDraginoParser.py  testRegEx.py
tmm/: .env.example  Dockerfile  app.py  requirements.txt
tmm/payload/: DraginoLSE01.py  PayloadParser.py  PayloadParserFactory.py
