[tool.poetry]
name = "dwd-import"
version = "0.1.0"
description = "Importer for DWD data"
authors = ["code4bielefeld"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
influxdb-client = "^1.31.0"
rasterio = "^1.3.1"
pyproj = "^3.3.1"
requests = "^2.28.1"
fire = "^0.4.0"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dwd-import = 'dwd_import.dwd_import:run'
dwd-stations = 'dwd_import.dwd_stations:run'
