[tool.poetry]
name = "tmm-api"
version = "0.1.0"
description = "Teuto Moisture Map Api"
authors = ["code4bielefeld"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
influxdb-client = "^1.31.0"
fastapi = "^0.87.0"
uvicorn = "^0.19.0"
python-multipart = "^0.0.5"
mangum = "^0.17.0"
cachetools = "^5.3.0"
boto3 = "^1.28.26"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
boto3-stubs = "^1.28.26"
mypy = "^0.982"
nox = "^2023.4.22"
ruff = "^0.0.128"
pytest = "^7.1.2"
watchfiles = "^0.18.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]

[tool.ruff]
line-length = 120
select = [
    "C","E","F","W","B","Q", "N","U"
    #,"D" # todo
    ]
ignore = [
    "E501",
    ]
exclude = [
    ".git",
    "__pycache__",
    "*.egg-info",
    ".nox",
    ".pytest_cache",
    ".mypy_cache",
    "dist"
    ]

[tool.black]
line-length = 120
