[project]
name = "tmm-api"
version = "0.1.0"
description = "Teuto Moisture Map Api"
authors = [{ name = "code4bielefeld" }]
requires-python = "~=3.11.0"
license = "MIT"
dependencies = [
    "influxdb-client>=1.31.0,<2",
    "fastapi>=0.87.0,<0.88",
    "uvicorn>=0.19.0,<0.20",
    "python-multipart>=0.0.5,<0.0.6",
    "mangum>=0.17.0,<0.18",
    "cachetools>=5.3.0,<6",
    "boto3>=1.28.26,<2",
]

[dependency-groups]
dev = [
    "black>=22.10.0,<23",
    "boto3-stubs>=1.28.26,<2",
    "mypy>=0.982,<0.983",
    "nox>=2023.4.22,<2024",
    "ruff>=0.0.128,<0.0.129",
    "pytest>=7.1.2,<8",
    "watchfiles>=0.18.1,<0.19",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
select = [
    "C",
    "E",
    "F",
    "W",
    "B",
    "Q",
    "N",
    "U",
    #,"D" # todo
]
ignore = ["E501"]
exclude = [
    ".git",
    "__pycache__",
    "*.egg-info",
    ".nox",
    ".pytest_cache",
    ".mypy_cache",
    "dist",
    ".venv",
    "scratch",
]

[tool.black]
line-length = 120
