[project]
name = "tmm-api"
version = "0.1.0"
description = "Teuto Moisture Map Api"
authors = [{ name = "code4bielefeld" }]
requires-python = "~=3.13.0"
license = "MIT"
dependencies = [
    "influxdb-client>=1.31.0",
    "fastapi>=0.87.0",
    "uvicorn>=0.19.0",
    "python-multipart>=0.0.5",
    "mangum>=0.17.0",
    "cachetools>=5.3.0",
    "boto3>=1.28.26",
]

[dependency-groups]
dev = [
    "black>=22.10.0",
    "boto3-stubs>=1.28.26",
    "mypy>=0.982",
    "nox>=2023.4.22",
    "ruff>=0.0.128",
    "pytest>=7.1.2",
    "watchfiles>=0.18.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
exclude = [
    ".git",
    "__pycache__",
    "*.egg-info",
    ".nox",
    ".pytest_cache",
    ".mypy_cache",
    "dist",
    ".venv",
    "scratch",
]

[tool.ruff.lint]
select = [
    "C",
    "E",
    "F",
    "W",
    "B",
    "Q",
    "N",
    "U",
    #,"D" # todo
]
ignore = ["E501"]

[tool.black]
line-length = 120
