[tool.poetry]
name = "ttn-hook"
version = "0.1.0"
description = "Webhook for moisture data delivered through The Things Network"
authors = ["code4bielefeld"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.2"
influxdb-client = "^1.31.0"
jsonpath-ng = "^1.5.3"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
